Project Video Overflow solved

--- a/Content3.css
+++ b/Content3.css
@@ -11,6 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: stretch;
+    overflow:hidden;
     border: 2px solid gray;
     border-radius: 20px;
     padding-bottom: 12px;
